bug 624900 - '.com' portion of email address disappears when spanning to password field on facebook.com r=cjones a=blocking-fennec